ansible/roles/rook/files/dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-rook-ingress
  namespace: rook-ceph
  annotations:
    haproxy.org/server-ssl: "true"
spec:
  ingressClassName: haproxy
  rules:
    - host: rook.arriaga.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  name: https-dashboard
